# pyattachsql

./: .gitignore  .travis.yaml  .travis.yml  MANIFEST.in  README.md  setup.cfg  setup.py  tox.ini
attachdb/: __init__.py  connection.py  cursor.py  exceptions.py  types.py
docs/: conf.py  index.rst
docs/api/: connection.rst  group.rst  module.rst  query.rst  statement.rst
docs/dbapi/: connection.rst  cursor.rst  module.rst
docs/introduction/: installing.rst  license.rst  whatis.rst
src/: connection.c  connection.h  group.c  group.h  module.c  module.h  pool.c  pool.h  query.c  query.h  statement.c  statement.h  util.c
tests/: test_compression.py  test_connect.py  test_group.py  test_query.py  test_statement.py  test_version.py
tests/attachdb/: test_connect_dbapi.py  test_query_dbapi.py
tests/attachsql/: test_connect.py  test_group.py  test_query.py
