[metadata]
name = pyAttachSQL
author = Andrew Hutchings <andrew@linuxjedi.co.uk>
summary = Python layer for libAttachSQL for MySQL servers
description-file = README.md
home-page = http://libattachsql.org/
classifier =
        Development Status :: 3 - Alpha
        Environment :: Plugins
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: C

[build_sphinx]
all_files = 1
build-dir = build/sphinx
source-dir = docs
